# ontime-cue-sheet

./: .dockerignore  .env.example  .gitignore  AUTHORS.md  DISCLAIMER.md  Dockerfile  Dockerfile.vercel  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  netlify.toml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py  ontime.py  pdf.py
app/templates/: cue_sheet.html  index.html
netlify/functions/: connection-test.mjs  generate.mjs  health.mjs  preview.mjs
netlify/functions/_shared/: ontime.mjs  pdf.mjs  responses.mjs
public/: index.html
scripts/: render-qa-fixture.mjs  verify-build.mjs
tests/: fixtures.mjs  functions.test.mjs  ontime.test.mjs  pdf.test.mjs  static.test.mjs  test_app.py
