[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "ontime-cue-sheet"
version = "0.1.0"
description = "Generate printable PDF cue sheets from an Ontime rundown."
readme = "README.md"
license = "0BSD"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "jinja2>=3.1,<4",
  "python-multipart>=0.0.20,<1",
  "uvicorn[standard]>=0.34,<1",
  "weasyprint>=69,<70",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "pypdf>=5,<7", "respx>=0.22,<1"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["templates/*.html"]
